fixed images shifting

--- a/src/App.scss
+++ b/src/App.scss
@@ -26,3 +26,7 @@ section {
     height: 100vh;
     scroll-snap-align: center;
 }
+
+#Contact {
+    height: auto;
+}
