--- a/src/components/contact/style.scss
+++ b/src/components/contact/style.scss
@@ -60,6 +60,9 @@
     flex: 1;
     position: relative;
     @include mobile {
+      display: flex;
+      justify-content: center;
+      align-items: center;
       padding: 50px;
       width: 100%;
     }
@@ -78,6 +81,7 @@
       }
     }
     form {
+      width: 100%;
       display: flex;
       flex-direction: column;
       gap: 20px;
