--- a/src/components/hero/style.scss
+++ b/src/components/hero/style.scss
@@ -22,7 +22,7 @@
           gap: 20px;
         }
         @include mobile {
-          margin: 0;
+          margin: 110px 0 0;
           align-items: center;
           text-align: center;
         }
@@ -71,34 +71,32 @@
         position: absolute;
         display: flex;
         justify-content: flex-end;
+        width: 45%;
         height: 100%;
         top: 0;
         right: 0;
         padding-right: 35px;
+        clip-path: circle(40%);
         @include tablet {
-          width: 48%;
+          width: 40%;
           padding: 20px;
+          clip-path: circle(33%); 
         }
         @include mobile {
           justify-content: center;
-          width: 100%;
-          top: -260px;
+          width: 70%;
+          height: 50%;
+          top: 25%;
+          left: 50%;
+          transform: translate(-50%, -50%);
+          clip-path: circle(30%);
           padding: 0;
         }
         img {
           max-width: 100%;
           height: auto;
-          clip-path: circle(240px);
           background-color: rgba(0, 0, 0, 0.295);
           object-fit: contain;
-          @include tablet {
-            width: 58%;
-            clip-path: circle(100px);
-          }
-          @include mobile {
-            width: 50%;
-            clip-path: circle(100px);
-          }
         }
       }
       .slidingTextContainer {
